--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "type": "module",
-  "description": "[![Actions Status](https://github.com/artem-taran/backend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/artem-taran/backend-project-lvl2/actions)",
   "main": "index.js",
+  "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
+  "description": "[![Actions Status](https://github.com/artem-taran/backend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/artem-taran/backend-project-lvl2/actions)",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx -n '--experimental-vm-modules --no-warnings' jest"
   },
   "repository": {
     "type": "git",
@@ -25,8 +29,10 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "@jest/globals": "^26.6.2",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3"
   }
 }
