--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/artem-taran/backend-project-lvl2#readme",
   "dependencies": {
     "commander": "^7.0.0",
+    "js-yaml": "^4.0.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
